--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -37,11 +37,6 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-      - name: Inject secret into HTML
-        run: |
-          API_KEY="${{ secrets.API_KEY }}"
-          sed -i "s/YOUR_API_KEY_PLACEHOLDER/${API_KEY}/g" test.html # Replace index.html and YOUR_API_KEY_PLACEHOLDER accordingly
-          # Repeat for other files as needed
 
   # Deployment job
   deploy:
@@ -51,6 +46,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
